// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addPlugins gatsby-config.js should not write with no plugins 1`] = `
"/**
 * @type {import('gatsby').GatsbyConfig}
 */
module.exports = {
  siteMetadata: {
    siteUrl: \`https://www.yourdomain.tld\`,
  },
  plugins: [],
}
"
`;

exports[`addPlugins gatsby-config.js should write a plugin with options 1`] = `
"/**
 * @type {import('gatsby').GatsbyConfig}
 */
module.exports = {
  siteMetadata: {
    siteUrl: \`https://www.yourdomain.tld\`
  },
  plugins: [{
    resolve: 'gatsby-plugin-hello',
    options: {
      \\"greet\\": true
    }
  }]
};"
`;

exports[`addPlugins gatsby-config.js should write a single plugin 1`] = `
"/**
 * @type {import('gatsby').GatsbyConfig}
 */
module.exports = {
  siteMetadata: {
    siteUrl: \`https://www.yourdomain.tld\`
  },
  plugins: [\\"gatsby-plugin-hello\\"]
};"
`;

exports[`addPlugins gatsby-config.js should write multiple plugins 1`] = `
"/**
 * @type {import('gatsby').GatsbyConfig}
 */
module.exports = {
  siteMetadata: {
    siteUrl: \`https://www.yourdomain.tld\`
  },
  plugins: [\\"gatsby-plugin-hello\\", \\"gatsby-plugin-world\\"]
};"
`;

exports[`addPlugins gatsby-config.ts should not write with no plugins 1`] = `
"import type { GatsbyConfig } from \\"gatsby\\"

const config: GatsbyConfig = {
  siteMetadata: {
    siteUrl: \`https://www.yourdomain.tld\`,
  },
  // More easily incorporate content into your pages through automatic TypeScript type generation and better GraphQL IntelliSense.
  // If you use VSCode you can also use the GraphQL plugin
  // Learn more at: https://gatsby.dev/graphql-typegen
  graphqlTypegen: true,
  plugins: [],
}

export default config
"
`;

exports[`addPlugins gatsby-config.ts should write a plugin with options 1`] = `
"import type { GatsbyConfig } from \\"gatsby\\";

const config: GatsbyConfig = {
  siteMetadata: {
    siteUrl: \`https://www.yourdomain.tld\`
  },
  // More easily incorporate content into your pages through automatic TypeScript type generation and better GraphQL IntelliSense.
  // If you use VSCode you can also use the GraphQL plugin
  // Learn more at: https://gatsby.dev/graphql-typegen
  graphqlTypegen: true,
  plugins: [{
    resolve: 'gatsby-plugin-hello',
    options: {
      \\"greet\\": true
    }
  }]
};

export default config;
"
`;

exports[`addPlugins gatsby-config.ts should write a single plugin 1`] = `
"import type { GatsbyConfig } from \\"gatsby\\";

const config: GatsbyConfig = {
  siteMetadata: {
    siteUrl: \`https://www.yourdomain.tld\`
  },
  // More easily incorporate content into your pages through automatic TypeScript type generation and better GraphQL IntelliSense.
  // If you use VSCode you can also use the GraphQL plugin
  // Learn more at: https://gatsby.dev/graphql-typegen
  graphqlTypegen: true,
  plugins: [\\"gatsby-plugin-hello\\"]
};

export default config;
"
`;

exports[`addPlugins gatsby-config.ts should write multiple plugins 1`] = `
"import type { GatsbyConfig } from \\"gatsby\\";

const config: GatsbyConfig = {
  siteMetadata: {
    siteUrl: \`https://www.yourdomain.tld\`
  },
  // More easily incorporate content into your pages through automatic TypeScript type generation and better GraphQL IntelliSense.
  // If you use VSCode you can also use the GraphQL plugin
  // Learn more at: https://gatsby.dev/graphql-typegen
  graphqlTypegen: true,
  plugins: [\\"gatsby-plugin-hello\\", \\"gatsby-plugin-world\\"]
};

export default config;
"
`;
